Tweaked the review page to display data more clearly

--- a/web/templates/review.html
+++ b/web/templates/review.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block head %}
 <title>Paper Parser Web UI</title>
-<link rel="stylesheet" type="css/text" href="{{ url_for('static', filename='review.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='review.css') }}">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 <script type="text/javascript" src="{{url_for('static', filename='review.js')}}"></script>
 {% endblock %}
